--- a/flashcards/templates/flashcards/base.html
+++ b/flashcards/templates/flashcards/base.html
@@ -111,6 +111,26 @@
                             <i class="fas fa-target me-1"></i>Focus Blocks
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'flashcards:focus_schedule' %}">
+                            <i class="fas fa-calendar-alt me-1"></i>Study Schedule
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'flashcards:start_focus_study_session' %}">
+                            <i class="fas fa-graduation-cap me-1"></i>Interactive Study
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'flashcards:debug_focus_chunks' %}">
+                            <i class="fas fa-bug me-1"></i>Debug Focus Blocks
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'flashcards:new_format_knowledge_graph' %}">
+                            <i class="fas fa-project-diagram me-1"></i>Knowledge Graph
+                        </a>
+                    </li>
                 </ul>
                 
                 <ul class="navbar-nav">
